# titan-10

./: .coverage  .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml  report.md  test_db_connect.py  verify_analysis.py  verify_api.py  verify_data.py
.gsd/: ARCHITECTURE.md  DECISIONS.md  JOURNAL.md  REQUIREMENTS.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md  TODO.md
.gsd/phases/4/: VERIFICATION.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-data-ingestion/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2025-01-18-titan-10-design.md
src/: __init__.py
src/api/: main.py  routes.py
src/api/static/: index.html
src/ingestor/: __init__.py  backfill.py  exchange.py  fetcher.py  normalizer.py  scheduler.py
src/quant/: analysis.py
src/shared/: __init__.py  config.py  logging.py  types.py
src/storage/: __init__.py  connection.py  db.py  models.py  queries.py
src/storage/migrations/: 001_init_hypertables.sql  env.py
src/storage/migrations/versions/: 20260118_1639_8bd43deacc4e_initial_schema.py  20260118_1645_4d4562267118_add_computed_metrics.py
tests/: conftest.py
tests/api/: test_api.py
tests/ingestor/: __init__.py  test_exchange.py  test_fetcher.py  test_normalizer.py  test_scheduler.py
tests/quant/: __init__.py  test_analysis.py
tests/shared/: test_config.py  test_types.py
tests/storage/: test_connection.py  test_connection_integration.py  test_models.py  test_queries_integration.py
